[metadata]
name = ape
version = attr: ape.__version__
description = Ardupilot pid envaluation tool
long_description = file: README.rst, LICENSE.rst
keywords = one, two
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
packages = find:

[options.packages.find]
exclude =
  tests
  ape/__pycache__

[options.entry_points]
console_scripts =
  ape-pid-envaluation = ape.evaluation:main
