[metadata]
name = ape
version = attr: ape.__version__
description = Ardupilot pid envaluation tool
long_description = file: README.rst, LICENSE
keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
packages = find:

[options.packages.find]
exclude =
  tests
  ape/__pycache__

[options.entry_points]
console_scripts =
  ape-pid-envaluation = ape.evaluation:main
